@@ -1,3 +1,8 @@
+* Tue Sep 24 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.3-0
+- Change metadata OS version check to use new simplib check that returns
+  false or true if the OS is supported according to metadata.json.
+  If it is not supported, do nothing (instead of failing).
+
 * Mon Sep 02 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.3-0
 - RedHat 8 does not support TCP Wrappers
 - Add call to simplib:assert_metadata to check the OS
